2010-05-02 Dusan Jocic <dusanjocic@msn.com>
    * [cMake] Added "-mcmodel=large" to the cMake debug flags
	* [Convars] Initialize "cl_maxPing"
	* [Convars] Fixed crash with not initialized "cl_maxPing" convar
    
2010-05-01 Dusan Jocic <dusanjocic@msn.com>
	* [GLSL] Misc fixes
	* [Server] Fixed crash with allocate snapshot entities 
	* [Community Server] Allow community server only for Windows build until we get working MySQL for Linux
	* [Master Server] Changed protocol version

2010-04-30 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Consolidation of engine and renderer convars
	* [Network] Fixed qport in case of potentially overflowing signed short
	* [Client] Splitted client.hpp into clientPublic.hpp and clientLocal.hpp
	* [Engine] Misc fixes

2010-04-29 Dusan Jocic <dusanjocic@msn.com>
	* [Engine] Zero qtime_t struct if localtime() fails
	* [Server] Check for incorrect game entity data and player state data
	* [Engine] Print backtrace on program error

2021-04-28 Dusan Jocic <dusanjocic@msn>
	* [Console] Removed loop
	* [Renderer] Removed OpenMP from the source code
	* [Server] Added checking for the user inside "idServerCcmdsSystemLocal::Status_f"
	* [Client] Fixed problems with "reconnecting" message in the console

2021-04-27 Dusan Jocic <dusanjocic@msn>
	* [Community Server] Fixed crash if community server refuse connection from the engine
	
2021-04-26 Dusan Jocic <dusanjocic@msn>
	* [Misc] Fixed compiling
	
2021-04-25 Dusan Jocic <dusanjocic@msn>
	* [Server] Experimenting with 128 players per server
	* [Engine] ERR_DROP causes dedicated servers to enter an inoperable state instead of crashing completely and being restarted.
	* [Client] Moved client localization into C++ file
	* [Community Server] More work on the community server
	* [Mics] Removed null server files from the repo

2021-04-20 Dusan Jocic <dusanjocic@msn>
	* [Client] Moved client cinematic`s into C++ file

2021-04-20 Dusan Jocic <dusanjocic@msn>